{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 174,
  "lineage": "9fefbf45-7764-4a8a-83b1-58eb649eb377",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c9b17dcde3e725b",
            "association_id": "eipassoc-0e4a1bef404cedc0c",
            "domain": "vpc",
            "id": "eipalloc-07c9b17dcde3e725b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f550b81886c42013",
            "private_dns": "ip-10-0-0-70.us-east-2.compute.internal",
            "private_ip": "10.0.0.70",
            "public_dns": "ec2-18-117-38-112.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.38.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IP - ITG"
            },
            "tags_all": {
              "Name": "IP - ITG"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e83be366243f524a",
            "arn": "arn:aws:ec2:us-east-2:422061932045:instance/i-04d10243633a6a997",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d10243633a6a997",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PruebaTerraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0bbd0d44d00d77c5e"
              }
            ],
            "primary_network_interface_id": "eni-0bbd0d44d00d77c5e",
            "private_dns": "ip-10-0-0-181.us-east-2.compute.internal",
            "private_ip": "10.0.0.181",
            "public_ip": "3.145.45.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016f5f9e2621e4ea0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ef008ab6e0ef107",
            "tags": {
              "Name": "BASTION"
            },
            "tags_all": {
              "Name": "BASTION"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d86ec2fa1c31ac0d"
            ]
          },
          "dependencies": [
            "aws_network_interface.nwbastionhost",
            "aws_security_group.SgBationHost",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e83be366243f524a",
            "arn": "arn:aws:ec2:us-east-2:422061932045:instance/i-0084f2b5ed3808001",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0084f2b5ed3808001",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0538b1beeea0fe0b7"
              }
            ],
            "primary_network_interface_id": "eni-0538b1beeea0fe0b7",
            "private_dns": "ip-10-0-3-150.us-east-2.compute.internal",
            "private_ip": "10.0.3.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085d3dcb68367afa8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b775c761658762f9",
            "tags": {
              "Name": "WEB SERVER"
            },
            "tags_all": {
              "Name": "WEB SERVER"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00dd6f003c5ddf07b"
            ]
          },
          "dependencies": [
            "aws_network_interface.nwWebServer",
            "aws_security_group.SgAlb",
            "aws_security_group.SgBationHost",
            "aws_security_group.SgWebServer",
            "aws_subnet.PrivateSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ITGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:internet-gateway/igw-0fa31d7923f688a81",
            "id": "igw-0fa31d7923f688a81",
            "owner_id": "422061932045",
            "tags": {
              "Name": "INTERNET GATEWAY PROJECT 4"
            },
            "tags_all": {
              "Name": "INTERNET GATEWAY PROJECT 4"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:422061932045:loadbalancer/app/alb-webserver/e5ce435b87565621",
            "arn_suffix": "app/alb-webserver/e5ce435b87565621",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-webserver-112684125.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:422061932045:loadbalancer/app/alb-webserver/e5ce435b87565621",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-webserver",
            "security_groups": [
              "sg-0a62dcba61a90f6cc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d524f84b70944f2"
              },
              {
                "subnet_id": "subnet-0ee2902950d227ba0"
              }
            ],
            "subnets": [
              "subnet-00ef008ab6e0ef107",
              "subnet-02d524f84b70944f2",
              "subnet-0ee2902950d227ba0"
            ],
            "tags": {
              "Name": "ALB WEB SERVER"
            },
            "tags_all": {
              "Name": "ALB WEB SERVER"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.SgAlb",
            "aws_subnet.PublicSubnet1",
            "aws_subnet.PublicSubnet2",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rule_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:422061932045:listener/app/alb-webserver/e5ce435b87565621/ad8c68cc69ee7ae5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:422061932045:targetgroup/tg-webserver/ecaecc48a1cba396",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:422061932045:listener/app/alb-webserver/e5ce435b87565621/ad8c68cc69ee7ae5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:422061932045:loadbalancer/app/alb-webserver/e5ce435b87565621",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target-group-webserver",
            "aws_security_group.SgAlb",
            "aws_subnet.PublicSubnet1",
            "aws_subnet.PublicSubnet2",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:422061932045:targetgroup/tg-webserver/ecaecc48a1cba396",
            "arn_suffix": "targetgroup/tg-webserver/ecaecc48a1cba396",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:422061932045:targetgroup/tg-webserver/ecaecc48a1cba396",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-webserver",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 28800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TARGET GROUP WEB SERVER"
            },
            "tags_all": {
              "Name": "TARGET GROUP WEB SERVER"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:422061932045:targetgroup/tg-webserver/ecaecc48a1cba396-20231103043300230700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:422061932045:targetgroup/tg-webserver/ecaecc48a1cba396",
            "target_id": "i-0084f2b5ed3808001"
          },
          "dependencies": [
            "aws_instance.WebServer",
            "aws_lb_target_group.target-group-webserver",
            "aws_network_interface.nwWebServer",
            "aws_security_group.SgAlb",
            "aws_security_group.SgBationHost",
            "aws_security_group.SgWebServer",
            "aws_subnet.PrivateSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c9b17dcde3e725b",
            "connectivity_type": "public",
            "id": "nat-039edd5e1ced63173",
            "network_interface_id": "eni-0f550b81886c42013",
            "private_ip": "10.0.0.70",
            "public_ip": "18.117.38.112",
            "subnet_id": "subnet-00ef008ab6e0ef107",
            "tags": {
              "Name": "NAT GW"
            },
            "tags_all": {
              "Name": "NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.one",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nwWebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:network-interface/eni-0538b1beeea0fe0b7",
            "attachment": [
              {
                "attachment_id": "eni-attach-0db14a5a2d70ee0ef",
                "device_index": 0,
                "instance": "i-0084f2b5ed3808001"
              }
            ],
            "id": "eni-0538b1beeea0fe0b7",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:52:fe:8d:86:ef",
            "owner_id": "422061932045",
            "private_ip": "10.0.3.150",
            "private_ip_list": [
              "10.0.3.150"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.150"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00dd6f003c5ddf07b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b775c761658762f9"
          },
          "dependencies": [
            "aws_security_group.SgAlb",
            "aws_security_group.SgBationHost",
            "aws_security_group.SgWebServer",
            "aws_subnet.PrivateSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nwbastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:network-interface/eni-0bbd0d44d00d77c5e",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c8eb763cffeaea03",
                "device_index": 0,
                "instance": "i-04d10243633a6a997"
              }
            ],
            "id": "eni-0bbd0d44d00d77c5e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8b:37:c0:14:1d",
            "owner_id": "422061932045",
            "private_ip": "10.0.0.181",
            "private_ip_list": [
              "10.0.0.181"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.181"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d86ec2fa1c31ac0d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ef008ab6e0ef107"
          },
          "dependencies": [
            "aws_security_group.SgBationHost",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "NGWG-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00b216be2c45201401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-039edd5e1ced63173",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b216be2c4520140",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.one",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.RouteTablePrivate",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:route-table/rtb-00b216be2c4520140",
            "id": "rtb-00b216be2c4520140",
            "owner_id": "422061932045",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039edd5e1ced63173",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:route-table/rtb-01cf47ed009ddf134",
            "id": "rtb-01cf47ed009ddf134",
            "owner_id": "422061932045",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa31d7923f688a81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ITGW",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationPrivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0782dbe5597168de0",
            "route_table_id": "rtb-00b216be2c4520140",
            "subnet_id": "subnet-0b775c761658762f9"
          },
          "dependencies": [
            "aws_route_table.RouteTablePrivate",
            "aws_subnet.PrivateSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationPrivate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b599432c10bba7c8",
            "route_table_id": "rtb-00b216be2c4520140",
            "subnet_id": "subnet-049f436009ec7257a"
          },
          "dependencies": [
            "aws_route_table.RouteTablePrivate",
            "aws_subnet.PrivateSubnet2",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationPrivate3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbdb10fe26f71742",
            "route_table_id": "rtb-00b216be2c4520140",
            "subnet_id": "subnet-025391886bc3cfb98"
          },
          "dependencies": [
            "aws_route_table.RouteTablePrivate",
            "aws_subnet.PrivateSubnet3",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationPublic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021dee02ed273811b",
            "route_table_id": "rtb-01cf47ed009ddf134",
            "subnet_id": "subnet-00ef008ab6e0ef107"
          },
          "dependencies": [
            "aws_internet_gateway.ITGW",
            "aws_route_table.RouteTablePublic",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationPublic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0739d85bbfc93d8ea",
            "route_table_id": "rtb-01cf47ed009ddf134",
            "subnet_id": "subnet-0ee2902950d227ba0"
          },
          "dependencies": [
            "aws_internet_gateway.ITGW",
            "aws_route_table.RouteTablePublic",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationPublic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f12ada1ab29d471",
            "route_table_id": "rtb-01cf47ed009ddf134",
            "subnet_id": "subnet-02d524f84b70944f2"
          },
          "dependencies": [
            "aws_internet_gateway.ITGW",
            "aws_route_table.RouteTablePublic",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SgAlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:security-group/sg-0a62dcba61a90f6cc",
            "description": "SG-ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a62dcba61a90f6cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-ALB",
            "name_prefix": "",
            "owner_id": "422061932045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG ALB"
            },
            "tags_all": {
              "Name": "SG ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SgBationHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:security-group/sg-0d86ec2fa1c31ac0d",
            "description": "SG_BASTIONHOST",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d86ec2fa1c31ac0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.248.178.85/32"
                ],
                "description": "SSH Jeyson",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_BASTIONHOST",
            "name_prefix": "",
            "owner_id": "422061932045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG BASTION HOST"
            },
            "tags_all": {
              "Name": "SG BASTION HOST"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SgWebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:security-group/sg-00dd6f003c5ddf07b",
            "description": "SG_WEBSERVER",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dd6f003c5ddf07b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a62dcba61a90f6cc"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH BASTION HOST",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d86ec2fa1c31ac0d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_WEBSERVER",
            "name_prefix": "",
            "owner_id": "422061932045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG ERB SERVER"
            },
            "tags_all": {
              "Name": "SG ERB SERVER"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SgAlb",
            "aws_security_group.SgBationHost",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdsmysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:security-group/sg-0ccf77907436969f7",
            "description": "SG-RDS",
            "egress": [],
            "id": "sg-0ccf77907436969f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dd6f003c5ddf07b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG-RDS",
            "name_prefix": "",
            "owner_id": "422061932045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG RDS"
            },
            "tags_all": {
              "Name": "SG RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SgAlb",
            "aws_security_group.SgBationHost",
            "aws_security_group.SgWebServer",
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:subnet/subnet-0b775c761658762f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b775c761658762f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422061932045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:subnet/subnet-049f436009ec7257a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049f436009ec7257a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422061932045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:subnet/subnet-025391886bc3cfb98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025391886bc3cfb98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422061932045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:subnet/subnet-00ef008ab6e0ef107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ef008ab6e0ef107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "422061932045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:subnet/subnet-0ee2902950d227ba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee2902950d227ba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "422061932045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:subnet/subnet-02d524f84b70944f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d524f84b70944f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "422061932045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Name": "Public Subnet 3"
            },
            "vpc_id": "vpc-0bcce8e8c5b6defaf"
          },
          "dependencies": [
            "aws_vpc.Project4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:422061932045:vpc/vpc-0bcce8e8c5b6defaf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cf5e311847e6e53",
            "default_route_table_id": "rtb-0486e56192d551825",
            "default_security_group_id": "sg-031d3fcb89f9a8251",
            "dhcp_options_id": "dopt-48a10423",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bcce8e8c5b6defaf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0486e56192d551825",
            "owner_id": "422061932045",
            "tags": {
              "Name": "Project4 - vpc"
            },
            "tags_all": {
              "Name": "Project4 - vpc"
            }
          }
        }
      ]
    }
  ]
}